# claude-wx-tray

./: .gitignore  DESIGN.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-mac.yml
channel/: package.json  setup.ts  wechat-channel.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  keepalive.rs  lib.rs  main.rs  pty.rs  state.rs  tray.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: StatusBar.tsx  Terminal.tsx
src/lib/: tauri.ts
