[package]
name = "claude-wx-tray"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_wx_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-wx-tray"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"

[build-dependencies]
tauri-build = { version = "2", features = [] }
